Fixed Item spec migration and seeder
