# apiSpec.yaml
@@ -38,7 +38,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Item'          
+                $ref: '#/components/schemas/Item'
             application/xml:
               schema:
                 $ref: '#/components/schemas/Item'
@@ -77,7 +77,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Item'          
+                $ref: '#/components/schemas/Item'
             application/xml:
               schema:
                 $ref: '#/components/schemas/Item'
@@ -111,7 +111,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Item'          
+                  $ref: '#/components/schemas/Item'
             application/xml:
               schema:
                 type: array
@@ -148,7 +148,7 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Item'          
+                  $ref: '#/components/schemas/Item'
             application/xml:
               schema:
                 type: array
@@ -181,7 +181,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Item'          
+                $ref: '#/components/schemas/Item'
             application/xml:
               schema:
                 $ref: '#/components/schemas/Item'
@@ -301,7 +301,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'          
+                $ref: '#/components/schemas/User'
             application/xml:
               schema:
                 $ref: '#/components/schemas/User'
@@ -381,7 +381,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'          
+                $ref: '#/components/schemas/User'
             application/xml:
               schema:
                 $ref: '#/components/schemas/User'
@@ -486,7 +486,7 @@ components:
       required:
         - title
         - status
-        - userUid
+        - userId
       type: object
       properties:
         id:
@@ -495,19 +495,23 @@ components:
           example: 10
         title:
           type: string
-          example: My to do 
+          example: My to do
         status:
           type: number
           format: int64
           example: 1
-        userUid:
-          type: string
-          description: Uniq identifier of the user
-          example: jjldksjl789w
-        projectUid:
-          type: string
-          description: Uniq identifier of the project
-          example: jjldksjl789
+        userId:
+          type: number
+          format: int64
+          example: 1
+        projectId:
+          type: number
+          format: int64
+          example: 1
+        parentId:
+          type: number
+          format: int64
+          example: 1
       xml:
         name: item
     ApiResponse:
